[gd_scene load_steps=3 format=3 uid="uid://qkcschxa5my1"]

[ext_resource type="Script" path="res://Components/Control/InteractionControlComponent.gd" id="1_3nqhk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jn0kx"]
resource_local_to_scene = true
radius = 16.0

[node name="InteractionControlComponent" type="Area2D" groups=["components"]]
collision_layer = 4096
collision_mask = 4096
script = ExtResource("1_3nqhk")
isEnabled = null
cooldown = null
metadata/_edit_group_ = true

[node name="InteractionControlShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jn0kx")
debug_color = Color(0.76, 0.56, 0.8, 0.392157)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="onArea_entered"]
[connection signal="area_exited" from="." to="." method="onArea_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="onCooldownTimer_timeout"]
